# adaptive-nonmanifold-meshing-grsi

./: .gitignore  CITATION.cff  CMakeLists.txt  DATA_PROVENANCE.md  GRSI_FORM_VALUES.txt  GRSI_LIABILITY.txt  GRSI_SUBMISSION.txt  INSTALL_WINDOWS.txt  LICENSE  MANIFEST.sha256  PATCH_CONTENTS.txt  README.md  SOURCE_SNAPSHOT.txt  TESTED_ENVIRONMENT.txt  THIRD_PARTY_LICENSES.md  reproduce_eistute_linux.sh  reproduce_eistute_windows.bat  run_grsi.bat  run_grsi.sh
configs/book/: ablation_full.conf  ablation_no_hybrid.conf  ablation_no_sync.conf  article.conf
configs/decor_shelf/: ablation_full.conf  ablation_no_hybrid.conf  ablation_no_sync.conf  article.conf
configs/eistute/: ablation_full.conf  ablation_no_hybrid.conf  ablation_no_sync.conf  article.conf
docs/: CHANGES_FROM_ORIGINAL_SNAPSHOT.md  GRSI_REVIEW_GUIDE.md  REPRODUCIBILITY.md
include/adapter/: adapter.h
include/crab_mesh/aft/: advancing_front.h  boundary.h  edge.h  face.h  quadtree.h  quadtree_cell.h  shape.h  vertex.h
include/crab_mesh/numerical/: bisection_equation_root.h  equation_root.h  equation_root_function.h  function.h  multi_variable_function.h
include/crab_mesh/performer/: definitions.h  id_manager.h  ranged_id_manager.h
include/curvature/: adjacent.h  curvature.h  curvature_analytical.h  curvature_discrete.h
include/data/: definitions.h  element_adaptive.h  geometry.h  model.h  node_adaptive.h  point_adaptive.h  triangle_adaptive.h  vector_adaptive.h  vertex_adaptive.h
include/data/curve/: curve_adaptive.h  curve_adaptive_parametric.h  curve_adaptive_parametric_bezier.h  curve_adaptive_parametric_hermite.h
include/data/mesh/: mesh_adaptive.h  sub_mesh.h
include/data/patch/: patch.h  patch_bezier.h  patch_coons.h  patch_hermite.h
include/data/tree/: bin_tree.h
include/estimate/: charge_estimate_process.h
include/generator/: generator_adaptive.h
include/input_output/: file.h  models_3d.h  patch_reader.h  write_obj_file.h
include/parallel/: ApMeshCommunicator.h  Communicator.h  Definitions.h  MPICommunicator.h  ParallelMeshGenerator.h  TMCommunicator.h  Transferable.h
include/timer/: timer.h
input_models/: book_v7a.bp  eistute2.fixed.bp  ribbed_bracket_nm_decor.bp
paper/: README.md
reference/: eistute_metrics.csv  eistute_stage4.json
scripts/: build_linux.sh  build_windows.bat  collect_environment_windows.ps1  regenerate_manifest.ps1  regenerate_manifest.sh  run_book_linux.sh  run_book_windows.bat  run_decor_shelf_linux.sh  run_decor_shelf_windows.bat  run_eistute_linux.sh  run_eistute_windows.bat  validate_grsi_package.py  verify_book.py  verify_decor_shelf.py  verify_eistute.py  verify_model.py  verify_reference.py
src/: main.cpp
src/adapter/: adapter.cpp
src/crab_mesh/aft/: advancing_front.cpp  boundary.cpp  edge.cpp  face.cpp  quadtree.cpp  quadtree_cell.cpp  shape.cpp  vertex.cpp
src/crab_mesh/numerical/: bisection_equation_root.cpp  function.cpp
src/crab_mesh/performer/: id_manager.cpp  ranged_id_manager.cpp
src/curvature/: adjacent.cpp  curvature_analytical.cpp  curvature_discrete.cpp
src/data/: definitions.cpp  element_adaptive.cpp  geometry.cpp  model.cpp  node_adaptive.cpp  point_adaptive.cpp  triangle_adaptive.cpp  vector_adaptive.cpp  vertex_adaptive.cpp
src/data/curve/: curve_adaptive.cpp  curve_adaptive_parametric.cpp  curve_adaptive_parametric_bezier.cpp  curve_adaptive_parametric_hermite.cpp
src/data/mesh/: mesh_adaptive.cpp  sub_mesh.cpp
src/data/patch/: patch.cpp  patch_bezier.cpp  patch_coons.cpp  patch_hermite.cpp
src/data/tree/: bin_tree.cpp
src/estimate/: charge_estimate_process.cpp
src/generator/: generator_adaptive.cpp
src/input_output/: file.cpp  models_3d.cpp  patch_reader.cpp  write_obj_file.cpp
src/parallel/: ApMeshCommunicator.cpp  Communicator.cpp  MPICommunicator.cpp  MPIMessage.cpp  Message.cpp  NoCommunicator.cpp  NoThreadManager.cpp  OMPThreadManager.cpp  ParallelMeshGenerator.cpp  TMCommunicator.cpp  ThreadManager.cpp  Transferable.cpp
src/timer/: timer.cpp
